[package]
name = "fastdfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
anyhow = "1.0.69"
tokio = {version = "1.25.0", features = ["full"]}
md-5 = "0.10.5"
rand = "0.8.5"
base64 = "0.21.0"
axum = {version = "^0.6", features = ["multipart"]}
axum-macros = "^0.3"
axum-extra = "^0.5.0"
tracing = "^0.1"
tracing-subscriber = "^0.3"
crc32fast = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
futures = "^0.3"

